--- a/server/public/index.html
+++ b/server/public/index.html
@@ -4,5 +4,11 @@
   </head>
   <body>
     <h1>Chat App</h1>
+    <form action="#" id="chatForm">
+      <input name="message"/>
+      <button>Submit message</button>
+    </form>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="/js/chat.js"></script>
   </body>
 </html>
