--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,7 +8,8 @@
       <input name="message"/>
       <button>Submit message</button>
     </form>
+    <button id="locationShare">Send location</button>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="/js/chat.js"></script>
+    <script type="module" src="/js/chat.js"></script>
   </body>
 </html>
