Disable buttons while fetching data or waiting for a message to arrive

--- a/server/public/index.html
+++ b/server/public/index.html
@@ -9,8 +9,8 @@
         <img src="./img/chat.svg" class="chat-icon"/>
       </h1>
       <form action="#" id="chatForm">
-        <input name="message"/>
-        <button>Submit message</button>
+        <input id="message" name="message"/>
+        <button id="submitMessageBtn">Submit message</button>
       </form>
       <div class="location">
         <img class="location-icon" src="./img/location-pin.svg"/>
