--- a/server/public/index.html
+++ b/server/public/index.html
@@ -8,6 +8,10 @@
       <h1 class="title">Chat App
         <img src="./img/chat.svg" class="chat-icon"/>
       </h1>
+      <!-- Messages go here -->
+      <div id="messages"></div>
+
+      <!-- User input -->
       <form action="#" id="chatForm">
         <input id="message" name="message"/>
         <button id="submitMessageBtn">Submit message</button>
@@ -16,7 +20,17 @@
         <img class="location-icon" src="./img/location-pin.svg"/>
         <button id="locationShare">Send location</button>
       </div>
+
+      <!-- Template for messages -->
+      <script id="messageTemplate" type="text/html">
+        <div class="messages-list">
+          <p>{{ message }}</p>
+        </div>
+      </script>
     </section>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script> -->
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/qs/6.6.0/qs.min.js"></script> -->
     <script src="/socket.io/socket.io.js"></script>
     <script type="module" src="/js/chat.js"></script>
   </body>
