--- a/server/public/index.html
+++ b/server/public/index.html
@@ -10,10 +10,11 @@
       </h1>
       <!-- Messages go here -->
       <div id="messages"></div>
+      <div id="locationMessage"></div>
 
       <!-- User input -->
       <form action="#" id="chatForm">
-        <input id="message" name="message"/>
+        <input id="message" name="message" autocomplete="off"/>
         <button id="submitMessageBtn">Submit message</button>
       </form>
       <div class="location">
@@ -27,6 +28,14 @@
           <p>{{ message }}</p>
         </div>
       </script>
+
+      <!-- Template for geolocation -->
+      <script id="locationTemplate" type="text/html">
+        <div class="geolocation-link">
+          <p><a href={{ locationLink }} target="_blank">My current location</a></p>
+        </div>
+      </script>
+
     </section>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/mustache.js/3.0.1/mustache.min.js"></script>
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script> -->
