Highlight current user's message and fix messages list scrolling

--- a/server/public/chat.html
+++ b/server/public/chat.html
@@ -12,8 +12,10 @@
       <!-- Room title -->
       <div id="chatMetadata"></div>
 
-      <!-- Messages go here -->
-      <div id="messages" class="messages"></div>
+      <div class="messages-wrapper">
+        <!-- Messages go here -->
+        <div id="messages" class="messages"></div>
+      </div>
       <!-- User input -->
       <div class="controls">
         <form action="#" id="chatForm">
